# Notability-notes-converter

./: Cargo.toml  README.md  notability2pdf.py
notability2pdf_lib/: __init__.py  archive.py  cli.py  constants.py  converter.py  fonts.py  models.py  parser.py  pdf.py  rendering.py  vector_pdf.py
src/: converter.rs  main.rs  pdf.rs
src/converter/: archive.rs  cli.rs  model.rs  note.rs  render.rs  util.rs
