[package]
name = "notability-converter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 2

[dependencies]
flate2 = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
lopdf = "0.35"
plist = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
